tests/baselines/reference/parserRegularExpression2.errors.txt
==== tests/cases/compiler/parserRegularExpression2.ts (1 errors) ====
    href.match(/:\/\/(.[^/]+)/)[1];
    ~~~~
!!! parserRegularExpression2.ts(1,1): error TS2095: Cannot find name 'href'.